syntax = "proto3";
package enreach.workload;

option go_package = "enreach/x/workload/types";

message Workload {
  uint64 id = 1;
  uint64 epoch = 2; 
  string minerId = 3; 
  uint64 score = 4; 
  string managerId = 5; 
  string creator = 6;
}
